--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "dev": "parcel ./index.html -p 2002"
+    "dev": "parcel ./index.html -p 2002",
+    "build": "rimraf dist && cross-env NODE_ENV=production parcel build ./index.html --no-cache"
   },
   "standard": {
     "parser": "babel-eslint",
@@ -16,33 +17,38 @@
     ]
   },
   "dependencies": {
-    "@babel/standalone": "^7.0.0-beta.49",
-    "axios": "^0.18.0",
-    "bluebird": "^3.5.1",
-    "echarts": "^4.1.0",
-    "echarts-gl": "^1.1.1",
-    "jquery": "1.12.4",
-    "lodash": "^4.17.10",
-    "resize-detector": "^0.1.6",
-    "vue": "^2.5.16",
-    "vue-fullscreen": "^2.1.3",
-    "vue-hot-reload-api": "^2.3.0",
-    "vue-router": "^3.0.1",
-    "vue2-ace-editor": "^0.0.10"
+    "koa": "^2.6.2",
+    "koa-static2": "^0.1.8"
   },
   "devDependencies": {
-    "@vue/component-compiler-utils": "^1.3.1",
+    "@babel/standalone": "^7.2.2",
+    "@vue/component-compiler-utils": "^2.3.1",
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
+    "babel-eslint": "^10.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "bluebird": "^3.5.3",
+    "cross-env": "^5.2.0",
+    "echarts": "^4.1.0",
+    "echarts-gl": "^1.1.1",
     "eslint-plugin-html": "^4.0.3",
-    "less": "^3.0.4",
-    "parcel-bundler": "^1.8.1",
+    "jquery": "1.12.4",
+    "less": "^3.9.0",
+    "lodash": "^4.17.11",
+    "parcel-bundler": "^1.10.3",
     "parcel-plugin-json-url-loader": "^0.1.1",
-    "standard": "^11.0.1",
-    "vue-template-compiler": "^2.5.16"
+    "resize-detector": "^0.1.9",
+    "rimraf": "^2.6.2",
+    "standard": "^12.0.1",
+    "vue": "^2.5.21",
+    "vue-fullscreen": "^2.1.3",
+    "vue-hot-reload-api": "^2.3.1",
+    "vue-router": "^3.0.2",
+    "vue-template-compiler": "^2.5.21",
+    "vue2-ace-editor": "^0.0.11"
   }
 }
