--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "get-charts",
   "scripts": {
     "dev": "parcel ./index.html -p 2002",
     "build": "rimraf dist && cross-env NODE_ENV=production parcel build ./index.html --no-cache"
